--- a/SafeMed Model.ipynb
+++ b/SafeMed Model.ipynb
@@ -922,86 +922,75 @@
         "    return encoding\n",
         "\n",
         "def verify(image_path1, image_path2, model):\n",
+        "    \"\"\"\n",
+        "    Function that verifies if the person on the \"image_path\" image is \"identity\".\n",
+        "    \n",
+        "    Arguments:\n",
+        "    image_path -- path to an image\n",
+        "    identity -- string, name of the person you'd like to verify the identity. Has to be a resident of the Happy house.\n",
+        "    database -- python dictionary mapping names of allowed people's names (strings) to their encodings (vectors).\n",
+        "    model -- your Inception model instance in Keras\n",
+        "    \n",
+        "    Returns:\n",
+        "    dist -- distance between the image_path and the image of \"identity\" in the database.\n",
+        "    door_open -- True, if the door should open. False otherwise.\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    ### START CODE HERE ###\n",
+        "    \n",
+        "   # Step 1: Compute the encoding for the image. Use img_to_encoding() see example above. (≈ 1 line)\n",
 
-       
+
         "    encoding1 = img_to_encoding(image_path1, model)\n",
         "    encoding2 = img_to_encoding(image_path2, model)\n",
-        
+        "    # Step 2: Compute distance with identity's image (≈ 1 line)\n",
+
         "    dist = np.linalg.norm(encoding1-encoding2)\n",
-        
-       
+        "    \n",
+        "    # Step 3: Open the door if dist < 0.7, else don't open (≈ 3 lines)\n",
+
+
         "    return dist"
       ],
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "N7mwO9TQmWbc",
-        "outputId": "0849323d-8993-439c-bc00-d4e3caf37d93"
-      },
       "source": [
         "model.fit(X_train,Y_train,final_bs,epochs=final_epochs,validation_data=validation_data)"
-      ],
-     
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fc215874050>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 115
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ys48py2bsrBB"
-      },
-      "source": [
-        "model.save('new_model.h5')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C5dom4sNuwey",
-        "outputId": "ae43c579-f698-4ddd-9bc1-a95a16873307"
-      },
-      "source": [
-        "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
-        "tflite_model = converter.convert()\n",
-        "\n",
-        "print('model converted')\n",
-        "\n",
-        "with open('model.tflite', 'wb') as f:\n",
-        "  f.write(tflite_model)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "INFO:tensorflow:Assets written to: /tmp/tmpir4cxswf/assets\n",
-            "model converted\n"
+            "Epoch 1/10\n",
+            "22/22 [==============================] - 40s 2s/step - loss: 0.2966 - val_loss: 0.4837\n",
+            "Epoch 2/10\n",
+            "22/22 [==============================] - 40s 2s/step - loss: 0.2921 - val_loss: 0.4653\n",
+            "Epoch 3/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2883 - val_loss: 0.4883\n",
+            "Epoch 4/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2868 - val_loss: 0.5145\n",
+            "Epoch 5/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2874 - val_loss: 0.5161\n",
+            "Epoch 6/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2876 - val_loss: 0.5218\n",
+            "Epoch 7/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2867 - val_loss: 0.4608\n",
+            "Epoch 8/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2856 - val_loss: 0.4645\n",
+            "Epoch 9/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2879 - val_loss: 0.4844\n",
+            "Epoch 10/10\n",
+            "22/22 [==============================] - 41s 2s/step - loss: 0.2824 - val_loss: 0.4599\n"
           ],
           "name": "stdout"
-        }
+        },
+
+        {
+          "output_type": "execute_result",
+          "data": {
+
       ]
     }
   ]
+} 
 }
