--- a/SafeMed Model.ipynb
+++ b/SafeMed Model.ipynb
@@ -939,20 +939,26 @@
         "    ### START CODE HERE ###\n",
         "    \n",
         "   # Step 1: Compute the encoding for the image. Use img_to_encoding() see example above. (≈ 1 line)\n",
-
-
         "    encoding1 = img_to_encoding(image_path1, model)\n",
         "    encoding2 = img_to_encoding(image_path2, model)\n",
         "    # Step 2: Compute distance with identity's image (≈ 1 line)\n",
-
         "    dist = np.linalg.norm(encoding1-encoding2)\n",
         "    \n",
         "    # Step 3: Open the door if dist < 0.7, else don't open (≈ 3 lines)\n",
-
-
         "    return dist"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N7mwO9TQmWbc",
+        "outputId": "0849323d-8993-439c-bc00-d4e3caf37d93"
+      },
       "source": [
         "model.fit(X_train,Y_train,final_bs,epochs=final_epochs,validation_data=validation_data)"
       ],
@@ -984,13 +990,60 @@
           ],
           "name": "stdout"
         },
-
         {
           "output_type": "execute_result",
           "data": {
-
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fc215874050>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ys48py2bsrBB"
+      },
+      "source": [
+        "model.save('new_model.h5')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C5dom4sNuwey",
+        "outputId": "ae43c579-f698-4ddd-9bc1-a95a16873307"
+      },
+      "source": [
+        "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
+        "tflite_model = converter.convert()\n",
+        "\n",
+        "print('model converted')\n",
+        "\n",
+        "with open('model.tflite', 'wb') as f:\n",
+        "  f.write(tflite_model)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: /tmp/tmpir4cxswf/assets\n",
+            "model converted\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
-} 
 }
